# robstore

./: .Rbuildignore  404.html  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  authors.html  index.html  pkgdown.yml  sitemap.xml
R/: extendr-wrappers.R  store.R
man/: azure_store.Rd  azure_store_anonymous.Rd  azure_store_sas.Rd  gcs_store.Rd  gcs_store_anonymous.Rd  local_store.Rd  memory_store.Rd  s3_store.Rd  s3_store_anonymous.Rd  store_copy.Rd  store_delete.Rd  store_exists.Rd  store_get.Rd  store_get_many.Rd  store_get_range.Rd  store_get_ranges_many.Rd  store_head_bytes.Rd  store_list.Rd  store_list_delimited.Rd  store_list_many.Rd  store_put.Rd
news/: index.html
reference/: azure_store.html  azure_store_anonymous.html  azure_store_sas.html  gcs_store.html  gcs_store_anonymous.html  index.html  local_store.html  memory_store.html  s3_store.html  s3_store_anonymous.html  store_copy.html  store_delete.html  store_exists.html  store_get.html  store_get_many.html  store_get_range.html  store_get_ranges_many.html  store_head_bytes.html  store_list.html  store_list_delimited.html  store_list_many.html  store_put.html
src/: Makevars.in  Makevars.win.in  entrypoint.c  robstore-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
