[package]
name = "robstore"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "robstore"

[dependencies]
extendr-api = "0.8"
object_store = { version = "0.13", features = ["aws"] }
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
once_cell = "1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1